# cppPosit

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  bitbucket-pipelines.yml  makeone.sh  preamble.txt
doc/: CMakeLists.txt  Doxyfile.in
include/: FindInt128.cmake  anyfloat.hpp  binary8.hpp  bithippop.hpp  catch.hpp  exp2.hpp  exp2t.hpp  fixedtraits.hpp  float12.hpp  float16native32.hpp  float2posit.hpp  floatconst2bits.hpp  floattraits.hpp  posit.h  posit10.hpp  posit12.hpp  posit8.hpp  positeigen.h  positf.h  simdposit8.hpp  softfloat.hpp  softfloat_limits.hpp  testsposit.hpp  tposit.hpp  tvalids.hpp  typehelpers.hpp  unpacked.h
include/simd/: asimd_16.h  asimd_32.h  asimd_8.h  asimd_all.h  asimd_base.h  asimd_d.h  asimd_f.h
jupyter/: first.ipynb
matlab/: cellindex.m  cellvcat.m  compareposits.m  compareposits2.m  describetab.m  dump2table.m  fromindex.m  halfinrange.m  limittab.m  loadpositdump.m  meandiff.m  mex_make.m  morton.m  normr.m  p8Tofloat.cpp  p8binop.cpp  p8unop.cpp  sift_fea.m  test_p8conv.m  testfloat11.m  toindex.m
matlab/halfprecision/: halfprecision.c  origin.txt
scripts/: float2bin.py  listpositany.sh  listposits8_16.sh  listposits8_16bin.sh  punum.py  valid2tvalid.py  validsgentable.py
src/: binary8.cpp  binary8_gen.cpp  floatTop8.cpp  listposits.cpp  main.cpp  maineigen.cpp  posit10.cpp  posit10_gen.cpp  posit12.cpp  posit12_gen.cpp  posit12_tbl.cpp  posit8.cpp  posit8_gen.cpp  posit8_tbl.cpp  simdposit8.cpp  softfloat_gen.cpp
tests/: itest_anyfloat.cpp  itest_anyvsreallimit.cpp  itest_constexpr.cpp  itest_float16native32.cpp  itest_lowlimits.cpp  itest_positf.cpp  itest_unpackfixed.cpp  itest_unpackfloat.cpp  makelimits.sh  minimal.cpp  test_dot.cpp  test_numeric_limits.cpp  testbit.cpp  testeps.cpp  testfind.cpp  testnextprev.cpp  testposit.cpp  testposit10.cpp  testposit12.cpp  testposit8.cpp  testregime.cpp  testsimdposit8.cpp  testsoftfloat.cpp  testsposit.hpp  testunpacked.cpp
